==> rainierwolfcastle/mbed-cc3000/ccspi.c <==
#include "cmsis.h"
#include "ccspi.h"
#include "cc3000_host_driver/hci.h"
#include "cc3000_host_driver/netapp.h"
#include "cc3000_host_driver/evnt_handler.h"
#include "cc3000_host_driver/cc3000_common.h"
#define READ                            (3)
#define WRITE                           (1)
#define HI(value)                       (((value) & 0xFF00) >> 8)
#define LO(value)                       ((value) & 0x00FF)
#define HEADERS_SIZE_EVNT               (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE                 (5)
#define eSPI_STATE_POWERUP              (0)
#define eSPI_STATE_INITIALIZED          (1)
#define eSPI_STATE_IDLE                 (2)
#define eSPI_STATE_WRITE_IRQ            (3)
#define eSPI_STATE_WRITE_FIRST_PORTION  (4)
#define eSPI_STATE_WRITE_EOT            (5)
#define eSPI_STATE_READ_IRQ             (6)
#define eSPI_STATE_READ_FIRST_PORTION   (7)
#define eSPI_STATE_READ_EOT             (8)
#define WL_MOD_ENABLE_SHIFT             (1 << 13) // Mask to turn-on Wi-Fi module
#define WL_MOD_ENABLE_OFF               (FPTA->PDOR &= ~WL_MOD_ENABLE_SHIFT)
#define WL_MOD_ENABLE_ON                (FPTA->PDOR |=  WL_MOD_ENABLE_SHIFT)
#define CC3000_ASSERT_CS { (FPTD->PDOR &= ~(1 << 0)); }
#define CC3000_DEASSERT_CS { (FPTD->PDOR |= (1 << 0)); }
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{
  printf("\tCC3000: init_spi\r\n");
  
  // enable SPI0 Clock gate
  SIM->SCGC4 |= SIM_SCGC4_SPI0_MASK;
  // disable COP Watchdog
  SIM->COPC &= (~SIM_COPC_COPT_MASK);
  // enable all port Clock Gating Controls
  SIM->SCGC5 |= SIM_SCGC5_PORTA_MASK|SIM_SCGC5_PORTB_MASK|SIM_SCGC5_PORTC_MASK|SIM_SCGC5_PORTD_MASK|SIM_SCGC5_PORTE_MASK;
  // disable SPI0 bus
  SPI0->C1 &= ~SPI_C1_SPE_MASK;
  // pin mux selection: Define the SPI lines:
  // SPI0_MOSI       PTD2      (J2-8)      Red
  // SPI0_MISO       PTD3      (J2-10)     Orange
  // SPI0K_SCK       PTC5      (J1-9)      Yellow
  // SPI0_PCS0       PTD0      (J2-6)      Green
  // WL_MOD_ENABLE   PTA13     (J2-2)
  // WL_SPI_IRQ      PTA16     (J1-2)
  PORTD->PCR[2] &= ~PORT_PCR_MUX_MASK;                 // SPI0_mosi (sout)
  PORTD->PCR[2] |= PORT_PCR_MUX(2)|PORT_PCR_DSE_MASK;  // PTD2 used as SPI0_MOSI, config pin for High Drive Strength

  PORTD->PCR[3] &= ~PORT_PCR_MUX_MASK;                 // SPI0_miso (sin)
  PORTD->PCR[3] |= PORT_PCR_MUX(2);                    // PTD3 used as SPI0_MISO

  PORTC->PCR[5] &= ~PORT_PCR_MUX_MASK;                 // SPI0_sck (sck)
  PORTC->PCR[5] |= PORT_PCR_MUX(2)|PORT_PCR_DSE_MASK;  // PTC5 = SPI0_SCK, config pin for High Drive Strength
  PORTD->PCR[0] &= ~PORT_PCR_MUX_MASK;                 // SPI0_cs  (psc0)
  PORTD->PCR[0] |= PORT_PCR_MUX(1)|PORT_PCR_DSE_MASK;  // PTD0 = User Controlled SPI0_PCS0, config pin for High Drive Strength
  FPTD->PDDR |= (1 << 0);                              // Set PTD0 to output

  // FDM: PTA16 used as WL_SPI_IRQ, IRQ output from CC3000
  // WL_SPI_IRQ interrupt is configured in SetupInterruptSystem()

  SPI0->C1 |= SPI_C1_MSTR_MASK;                      // SPI0 is spi master slave, bus clock is 12.5Mhz (0.08us)
  SPI0->BR  = 0x21;                                  // baud rate period = 1us (1Mbps)
  SPI0->C1 |= SPI_C1_SSOE_MASK;                      // auto slave-select OE

  SPI0->C2 &= (~SPI_C2_MODFEN_MASK);                 // disable SS function in MODFEN (for manual SS control)

  SPI0->C1 |=   SPI_C1_CPHA_MASK;                    // First edge on SPSCK at start of first data transfer cycle
  SPI0->C1 &= (~SPI_C1_CPOL_MASK);                   // Configures SPI clock as active-high

  SPI0->C1 &= (~SPI_C1_LSBFE_MASK);                  // SPI serial data transfers start with MSB
  SPI0->C1 |= SPI_C1_SPE_MASK;                       // enable SPI0

  SetupInterruptSystem();

  printf("\tCC3000: Finished init_spi\r\n");
  
  return(ESUCCESS);
}

void SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
  printf("\tCC3000: SpiWriteDataSynchronous Start\r\n");

  unsigned short loc;
  for (loc = 0; loc < size; loc ++) 
  {
    printf(" 0x%X", data[loc]);
    while (!(TXBufferIsEmpty()));
    SPI0->D = data[loc];
    while (!(RXBufferIsFull()));
    SPI0->D;
  }
  printf("\r\n");
  
  printf("\tCC3000: SpiWriteDataSynchronous End\r\n");
}

void SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
  unsigned short i = 0;
  unsigned char *data_to_send = tSpiReadHeader;
  
  printf("\tCC3000: SpiReadDataSynchronous\r\n");  
  for (i = 0; i < size; i ++)
  {
    while (!(TXBufferIsEmpty()));
    SPI0->D = data_to_send[i];
    while (!(RXBufferIsFull()));
    data[i] = SPI0->D;
    printf(" 0x%X", data[i]);
  }
  printf("\r\n");
}

void WriteWlanPin( unsigned char val )
{  
  printf("\tCC3000: WriteWlanPin - %d\r\n", val);
  __delay_cycles(2400);
  if (val)
  {
    WL_MOD_ENABLE_ON;
  }
  else
  {
    WL_MOD_ENABLE_OFF;
  }
}

long ReadWlanInterruptPin(void)
{
  uint32_t r = (FPTA->PDIR & (1<<16));
  printf("\tCC3000: ReadWlanInterruptPin - %d\r\n", r);

  return (r);
}

void WlanInterruptEnable()
{
  printf("\tCC3000: WlanInterruptEnable.\r\n");
  ccspi_int_enabled = 1;
  NVIC_EnableIRQ(PORTA_IRQn);
}

void WlanInterruptDisable()
{
  printf("\tCC3000: WlanInterruptDisable\r\n");
  ccspi_int_enabled = 0;
  NVIC_DisableIRQ(PORTA_IRQn);
}
